# amber-memory

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  IMPROVEMENT-PLAN-v1.md  LICENSE  PLAN.md  PROCESSING_STATUS.md  README.md  WECHAT-MEMORY-RUNBOOK.md  __init__.py  cli.py  client.py  demo.py  migrate.py  process_batch_simple.py  process_optimized.py  process_sources_batch.py  process_standalone.py  process_unprocessed_simple.py  pyproject.toml  reindex_embeddings.py
backups/2026-04-02-pre-candidate/: compressor.py  memory_extractor.py  process_reextract.py  process_unprocessed.py  process_unprocessed_v2.py  (+2 more)
core/: __init__.py  context.py  uri.py
docs/: architecture.md  design.md  tutorial.md
examples/: data_ingestion.py  export_and_sync.py  hybrid_search.py  pattern_detection.py  people_graph.py  quickstart.py  session_compression.py  taboo_system.py
graph/: __init__.py  patterns.py
integrations/: __init__.py
models/: __init__.py  ark_llm.py  claude_llm.py  xunfei_stt.py
prompts/: __init__.py  manager.py
retrieve/: __init__.py  intent_analyzer.py  retriever.py
scripts/: __init__.py  process_reextract.py  process_unprocessed_v2.py  process_yunnet.py  process_yunnet_simple.py  promote_candidates.py  reindex.py  reindex_doubao.py  test_candidate_pipeline.py  test_rag.py
session/: __init__.py  candidate_validator.py  compressor.py  life_proposals.py  memory_deduplicator.py  memory_extractor.py  memory_validator.py
sources/: __init__.py  bear.py  journal.py  link.py  photo.py  schedule.py  voice.py
storage/: __init__.py  candidate_store.py  sqlite_store.py
sync/: __init__.py
tests/: __init__.py  test_client.py  test_compressor.py  test_context.py  test_core.py  test_deduplicator.py  test_e2e.py  test_extractor.py  test_graph.py  test_patterns.py  test_prompts.py  test_retriever.py  test_store.py
(+7 files in other folders)
